<resources>
    <string name="app_name">Linear Layout card</string>
    <string name="name">Ahmed hassan</string>
    <string name="job_title">Engineer</string>
    <string name="Nationality">Russian</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="current_location">UK</string>
    <string name="reviews">(150 Reviews)</string>
    <string name="rattings">4.5</string>
    <string name="_3_hr">3 hr</string>
    <string name="todo">TODO</string>
</resources>